# Intellivium

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEUROFORGE_BUILD.md  README.es.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/neuroforge-core/: Cargo.toml
crates/neuroforge-core/examples/: xor.rs
crates/neuroforge-core/src/: lib.rs  nn.rs  rng.rs  tape.rs
crates/neuroforge-napi/: Cargo.toml
crates/neuroforge-napi/src/: lib.rs
docs/: ARCHITECTURE.md
examples/: xor.mjs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: data.ts  index.ts  layers.ts  model.ts  native.ts  tensor.ts
tests/: data.test.ts  index.test.ts  layers.test.ts  model.test.ts  tensor.test.ts
