[package]
name = "neuroforge-napi"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
ndarray = "0.15"
neuroforge-core = { path = "../neuroforge-core" }

[build-dependencies]
napi-build = "2"
